fixing align, hopefully

--- a/Nav.css
+++ b/Nav.css
@@ -29,7 +29,7 @@ nav {
 
 .nav li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
